cluster/apps/default/tekton/03_triggers/el-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "el-shared-ingress"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  rules:
    - host: "el-shared.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: "el-shared-listener"
                port:
                  number: 8080
            path: "/"
            pathType: Prefix
  tls:
    - hosts:
        - "el-shared.${SECRET_DOMAIN}"
      secretName: el-shared-vikaspogu-com
